# ChangeLog for dev-lang/gprolog
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/gprolog/ChangeLog,v 1.41 2009/12/10 05:26:56 keri Exp $

  10 Dec 2009; <keri@gentoo.org> -gprolog-1.3.0-r2.ebuild,
  -files/gprolog-1.3.0-CFLAGS_MACHINE.patch,
  -files/gprolog-1.3.0-TXT_FILES.patch, -files/gprolog-1.3.0-linedit.patch,
  -files/gprolog-1.3.0-test.patch:
  remove old versions

  09 Dec 2009; nixnut <nixnut@gentoo.org> gprolog-1.3.1.ebuild:
  ppc stable #295151

  30 Nov 2009; Markus Meier <maekke@gentoo.org> gprolog-1.3.1.ebuild:
  amd64/x86 stable, bug #295151

  03 Oct 2009; <keri@gentoo.org> gprolog-1.3.1.ebuild:
  Add -fno-strict-aliasing to CFLAGS. Fixes #277646

*gprolog-1.3.1 (12 Feb 2009)

  12 Feb 2009; <keri@gentoo.org> +files/gprolog-1.3.1-CFLAGS_MACHINE.patch,
  +files/gprolog-1.3.1-TXT_FILES.patch, +gprolog-1.3.1.ebuild:
  Version bump.

  18 Jan 2009; <keri@gentoo.org> -gprolog-1.3.0-r1.ebuild:
  Remove old version

  18 Jan 2009; Markus Meier <maekke@gentoo.org> gprolog-1.3.0-r2.ebuild:
  amd64/x86 stable, bug #254606

  17 Jan 2009; nixnut <nixnut@gentoo.org> gprolog-1.3.0-r2.ebuild:
  ppc stable #254606

*gprolog-1.3.0-r2 (22 Sep 2008)

  22 Sep 2008; <keri@gentoo.org> +gprolog-1.3.0-r2.ebuild:
  Revbump for machine register fixups. Closes bug #227527.

  28 Apr 2008; keri <keri@gentoo.org> -files/gprolog-1.2.19-CFLAGS.patch,
  -files/gprolog-1.2.19-bootstrap.patch, -files/gprolog-1.2.19-gcc4.patch,
  -files/gprolog-1.2.19-noexecstack.patch, -files/gprolog-1.2.19-test.patch,
  -gprolog-1.2.19.ebuild, -gprolog-1.3.0.ebuild:
  Remove old versions.

  27 Apr 2008; Markus Meier <maekke@gentoo.org> gprolog-1.3.0-r1.ebuild:
  amd64 stable, bug #210293

  17 Feb 2008; nixnut <nixnut@gentoo.org> gprolog-1.3.0-r1.ebuild:
  Stable on ppc wrt bug 210293

  16 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  gprolog-1.3.0-r1.ebuild:
  stable x86, bug 210293
