@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/gprolog
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/gprolog/ChangeLog,v 1.41 2009/12/10 05:26:56 keri Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/gprolog/ChangeLog,v 1.42 2010/03/12 18:25:04 keri Exp $
+
+  12 Mar 2010; <keri@gentoo.org> gprolog-1.3.1.ebuild:
+  Use mirror://gnu in SRC_URI
 
   10 Dec 2009; <keri@gentoo.org> -gprolog-1.3.0-r2.ebuild,
   -files/gprolog-1.3.0-CFLAGS_MACHINE.patch,
